# EdgeScene

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_shine.py  setup.py
shine/: __init__.py  cli.py  config.py  context.py  correlation.py  engine.py  intelligence.py  math_utils.py  models.py  odds_api.py  odds_math.py  probability.py  web.py
shine/api/: display.py  odds_client.py  pipeline.py
shine/context/: __init__.py  environment.py  travel.py
shine/core/: config.py  engine.py  models.py  probability.py
shine/correlation/: __init__.py  engine.py
shine/data/: big_competitions.py  competitions.json  home_edge.json  mock_odds.py  pressure_ratings.json  venues.json
shine/engine/: __init__.py  builder.py  ev.py  leg_factory.py
shine/environment/: adjustments.py  factors.py
shine/ev/: calculator.py
shine/intelligence/: __init__.py  _loader.py  big_stage.py  pressure.py  stage.py
shine/math/: __init__.py  devig.py  odds.py
shine/odds/: __init__.py  client.py  models.py  sports.py
shine/optimizer/: builder.py
shine/static/: app.js  styles.css
shine/templates/: index.html
shine/utils/: display.py
src/app/api/stock/: route.ts
src/lib/: mock-data.ts
stock-analyzer/: tailwind.config.ts
stock-analyzer/src/app/: globals.css  layout.tsx  page.tsx
stock-analyzer/src/app/analyze/: page.tsx
stock-analyzer/src/app/research/: page.tsx
stock-analyzer/src/components/: Sidebar.tsx  SignalBadge.tsx  StockSearch.tsx
stock-analyzer/src/lib/: ai-service.ts  types.ts
tests/: test_cli.py  test_correlation.py  test_devig.py  test_engine.py  test_environment.py  test_intelligence.py  test_math_utils.py  test_odds.py  test_odds_api.py  test_probability.py  test_web.py
(+3 files in other folders)
