[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shine-parlay-engine"
version = "0.1.0"
description = "Shine v4 moneyline parlay engine with no-vig, context, and EV scoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[project.scripts]
shine = "shine.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
