[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shine-parlay-engine"
version = "0.1.0"
description = "AI-assisted moneyline parlay EV engine using no-vig odds, context adjustments, and correlation scoring."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shine" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
shine = "shine.cli:main"

[tool.setuptools.packages.find]
include = ["shine*"]
